# fem-project

./: .gitignore  .gitmodules  CMakeLists.txt
lib/: CMakeLists.txt
lib/fem/: Errors.h  Simulation.cpp  Simulation.h  Timer.hpp
lib/fem/cfg/: Config.cpp  Config.h  GridConfig.cpp  GridConfig.h  SimulationConfig.h
lib/fem/grid/: Element.h  Grid.cpp  Grid.h  GridConfig.cpp  GridConfig.h  MatrixAggregator.hpp  Node.h
lib/fem/math/: IntegralSolver.hpp  JacobianSolver.cpp  JacobianSolver.h  MatrixHSolver.hpp  MatrixSolver.hpp  UniversalElement.cpp  UniversalElement.h  Utils.hpp
lib/fem/math/containers/: Matrix.hpp  Vector.hpp
plots/: plot.py
res/: cfg.json  mes.txt  test_case_1.json  test_case_2.json
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  GridTests.cpp  IntegralSolverTests.cpp
